@@ -163,6 +163,11 @@ no-echo-means-secure:		no
 # been specified).
 line-col-zero-default:		yes
 
+# If yes, then REPORT, COLUMN may have any of PLUS num, + num, or +num
+# to define a relative column position
+# If no, then COLUMN +num is not accepted due to signed numeric
+report-column-plus:		yes
+
 # If yes, DISPLAY SPACES acts as ERASE EOS, DISPLAY X"01" acts as ERASE EOL,
 # DISPLAY X"02" acts as BLANK SCREEEN and DISPLAY X"07" acts as BELL. Note
 # DISPLAY LOW-VALUE is excluded from this; it will always just position the
