@@ -157,6 +157,10 @@ no-echo-means-secure:		no
 # been specified).
 line-col-zero-default:		no
 
+# If yes, then REPORT, COLUMN may have any of PLUS num, + num, or +num
+# to define a relative column position
+report-column-plus:		no
+
 # If yes, DISPLAY SPACES acts as ERASE EOS, DISPLAY X"01" acts as ERASE EOL,
 # DISPLAY X"02" acts as BLANK SCREEEN and DISPLAY X"07" acts as BELL. Note
 # DISPLAY LOW-VALUE is excluded from this; it will always just position the
