@@ -1,8 +1,11 @@
 
-2019-09-20  Ron Norman <rjn@inglenet.com>
+2019-09-22  Ron Norman <rjn@inglenet.com>
 
 	* parser.y: Fixed 'integer' to allow signed values in report
 	           for example  COLUMN +2 vs COLUMN 2
+		   when -std=xxxx has report-column-plus: yes
+	* codegen.c,field.c: Corrections to handling of COLUMN 
+	           With OCCURS COLUMN +num is no longer an alternative for STEP
 
 2019-09-15  Ron Norman <rjn@inglenet.com>
 
